@@ -195,10 +195,10 @@
                         <property name="label">gtk-zoom-in</property>
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
-                        <property name="sensitive">False</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_menuitem_zoom_in_activate" swapped="no"/>
                       </object>
                     </child>
                     <child>
@@ -206,10 +206,10 @@
                         <property name="label">gtk-zoom-out</property>
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
-                        <property name="sensitive">False</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_menuitem_zoom_out_activate" swapped="no"/>
                       </object>
                     </child>
                   </object>
