@@ -40,5 +40,5 @@ function clearBuffer() {
 
 function changeFont(font, size) {
     $('body').css("font-family", font);
-    $('body').css("font-size", '%spt' % size);
+    $('body').css("font-size", size+"pt");
 }
